Set background color for voted links

--- a/app/src/main/res/drawable/link_card_background_upvoted.xml
+++ b/app/src/main/res/drawable/link_card_background_upvoted.xml
@@ -6,7 +6,7 @@
         android:color="@android:color/black"/>
 
     <solid
-        android:color="#FFFFFFFF" />
+        android:color="@color/reddit_orange"/>
 
     <padding
         android:top="1dp"
