--- a/app/src/main/res/drawable/link_card_background_downvoted.xml
+++ b/app/src/main/res/drawable/link_card_background_downvoted.xml
@@ -6,7 +6,7 @@
         android:color="@android:color/black"/>
 
     <solid
-        android:color="#FFFFFFFF" />
+        android:color="@color/reddit_blue" />
 
     <padding
         android:top="1dp"
