--- a/app/src/main/res/layout/reddit_link_item.xml
+++ b/app/src/main/res/layout/reddit_link_item.xml
@@ -113,6 +113,14 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/link_self_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/primary_text"
+            android:padding="@dimen/link_self_text_padding"
+            android:bufferType="spannable"/>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
