--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/navigation_drawer"
     style="@style/NavigationDrawer"
-    android:background="@drawable/navigation_drawer_background"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/navigation_drawer_header_background">
+        android:layout_height="@dimen/navigation_drawer_header_height"
+        android:background="@color/primary_dark">
 
         <LinearLayout
             android:layout_width="fill_parent"
