--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,5 +41,7 @@
     <dimen name="comment_data_divider_width">1dp</dimen>
     <dimen name="comment_data_divider_margin">3dp</dimen>
     <dimen name="navigation_drawer_header_height">160dp</dimen>
+    <dimen name="navigation_drawer_item_height">48dp</dimen>
+    <dimen name="navigation_drawer_elevation">6dp</dimen>
 
 </resources>
