Retrieving user identity for all authorization states

--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textColor="#ffffff"
-                android:text="damien5314"
+                android:text="Not signed in"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
