Set blue background for OP comments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,7 @@
     <color name="indentation">@color/primary_light</color>
     <color name="reddit_orange">#90FF8B60</color>
     <color name="reddit_blue">#909494FF</color>
+    <color name="op_background">#0055DF</color>
+    <color name="op_text">#ffffff</color>
 
 </resources>
