--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="reddit_blue">#909494FF</color>
     <color name="op_background">#0055DF</color>
     <color name="op_text">#ffffff</color>
+    <color name="comment_background">#ffffff</color>
 
 </resources>
