--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -13,71 +13,107 @@
         android:layout_width="@dimen/comment_indentation_margin"
         android:layout_height="match_parent" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/comment_data_margin_vertical"
-        android:paddingBottom="@dimen/comment_data_margin_vertical"
-        android:paddingLeft="@dimen/comment_data_margin_horizontal"
-        android:paddingRight="@dimen/comment_data_margin_horizontal">
+        android:layout_marginLeft="@dimen/comment_data_margin_horizontal"
+        android:layout_marginRight="@dimen/comment_data_margin_horizontal">
 
         <LinearLayout
-            android:id="@+id/comment_data"
+            android:id="@+id/comment_data_row"
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom">
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/comment_expander_icon"
+                android:layout_width="@dimen/comment_expander_size"
+                android:layout_height="@dimen/comment_expander_size"
+                android:layout_marginRight="@dimen/comment_expander_margin_horizontal"
+                android:layout_marginEnd="@dimen/comment_expander_margin_horizontal"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_thread_collapse"
+                android:background="@drawable/comment_expander_background"/>
 
             <LinearLayout
-                android:id="@+id/comment_expander_view"
+                android:id="@+id/comment_data"
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:gravity="bottom">
 
-                <ImageView
-                    android:id="@+id/comment_expander_icon"
-                    android:layout_width="@dimen/comment_expander_size"
-                    android:layout_height="@dimen/comment_expander_size"
-                    android:layout_marginRight="@dimen/comment_expander_margin"
-                    android:layout_marginEnd="@dimen/comment_expander_margin"
-                    android:src="@drawable/ic_thread_collapse"
-                    android:background="@drawable/comment_expander_background"/>
 
                 <TextView
                     android:id="@+id/comment_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0"
                     android:layout_marginRight="@dimen/comment_author_margin"
+                    android:layout_marginEnd="@dimen/comment_author_margin"
+                    android:text="HiThere"
                     android:textColor="@color/secondary_text"
                     android:textStyle="bold"
-                    android:textSize="@dimen/comment_author_text_size"/>
+                    android:textSize="@dimen/comment_author_text_size"
+                    android:ellipsize="end"
+                    android:maxLines="1"/>
+
+                <LinearLayout
+                    android:id="@+id/comment_secondary_data"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="start">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/comment_secondary_data_margin"
+                        android:layout_marginRight="@dimen/comment_secondary_data_margin"
+                        android:text="•"
+                        android:textSize="@dimen/comment_secondary_data_text_size"/>
+
+                    <TextView
+                        android:id="@+id/comment_score"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/comment_score_margin"
+                        android:layout_marginEnd="@dimen/comment_score_margin"
+                        android:text="88888"
+                        android:textColor="@color/secondary_text"
+                        android:textSize="@dimen/comment_score_text_size"
+                        android:maxLines="1"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/comment_secondary_data_margin"
+                        android:layout_marginRight="@dimen/comment_secondary_data_margin"
+                        android:text="•"
+                        android:textSize="@dimen/comment_secondary_data_text_size"/>
+
+                    <TextView
+                        android:id="@+id/comment_timestamp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="888 years ago"
+                        android:textColor="@color/secondary_text"
+                        android:textSize="@dimen/comment_timestamp_text_size"
+                        android:maxLines="1"/>
+
+                </LinearLayout>
 
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/comment_score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/comment_score_margin"
-                android:textColor="@color/secondary_text"
-                android:textSize="@dimen/comment_score_text_size"/>
-
-            <TextView
-                android:id="@+id/comment_timestamp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/secondary_text"
-                android:textStyle="italic"
-                android:textSize="@dimen/comment_timestamp_text_size"/>
 
             <TextView
                 android:id="@+id/comment_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/secondary_text"
-                android:textStyle="italic"
-                android:textSize="@dimen/comment_more_text_size"/>
+                android:textSize="@dimen/comment_more_text_size"
+                android:maxLines="1"/>
 
         </LinearLayout>
 
@@ -85,11 +121,11 @@
             android:id="@+id/comment_body"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/comment_data"
+            android:text="jawjawdlijawd"
             android:textSize="@dimen/comment_body_text_size"
             android:textColor="@color/primary_text"
             android:bufferType="spannable"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
