--- a/app/src/main/res/layout/link_item.xml
+++ b/app/src/main/res/layout/link_item.xml
@@ -29,10 +29,40 @@
                 android:id="@+id/link_title"
                 style="@style/LinkTitleTextView"/>
 
-            <TextView
-                android:id="@+id/link_domain"
-                android:layout_gravity="end"
-                style="@style/LinkDomainTextView"/>
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/gilded_view"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start">
+
+                    <ImageView
+                        android:id="@+id/gilded_image_view"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_gilded"/>
+
+                    <TextView
+                        android:id="@+id/gilded_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        style="@style/GildedTextView"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/link_domain"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    style="@style/LinkDomainTextView"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
