--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,6 +82,10 @@
         <!--<item name="android:textStyle">italic</item>-->
     </style>
 
+    <style name="GildedTextView" parent="LinkDomainTextView">
+        <!-- Simply inherits from LinkDomainTextView for now -->
+    </style>
+
     <style name="LinkScoreTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
