Added icon for saved links

--- a/app/src/main/res/layout/link_item.xml
+++ b/app/src/main/res/layout/link_item.xml
@@ -132,12 +132,13 @@
                         android:layout_gravity="start"
                         style="@style/LinkCommentCountTextView"/>
 
-                    <TextView
-                        android:id="@+id/link_saved_text"
+                    <ImageView
+                        android:id="@+id/link_saved_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:text="@string/link_saved_text"
-                        style="@style/LinkSavedView"/>
+                        android:src="@drawable/ic_saved"/>
 
                 </RelativeLayout>
 
