--- a/app/src/main/res/layout/link_item.xml
+++ b/app/src/main/res/layout/link_item.xml
@@ -138,6 +138,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
+                        android:layout_gravity="center_vertical"
                         android:src="@drawable/ic_saved"/>
 
                 </RelativeLayout>
