Removed underline from Go to Subreddit EditText widget

--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -40,10 +40,10 @@
             <ImageView
                 android:id="@+id/sign_out_button"
                 android:contentDescription="@string/sign_out_cs"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="?android:attr/listPreferredItemPaddingEnd"
+                android:layout_marginRight="?android:attr/listPreferredItemPaddingEnd"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_navigation_close"/>
 
