--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -18,8 +18,9 @@
 
             <ImageView
                 android:id="@+id/user_account_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/navigation_drawer_icon_size"
+                android:layout_height="@dimen/navigation_drawer_icon_size"
+                android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_user_account"/>
 
             <TextView
