Created separate layout file for comment stubs

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,9 +51,9 @@
     </style>
 
     <style name="NavigationDrawerItemText">
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>
     </style>
