--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -33,77 +33,66 @@
                 android:layout_height="@dimen/comment_expander_size"
                 android:layout_marginRight="@dimen/comment_expander_margin_horizontal"
                 android:layout_marginEnd="@dimen/comment_expander_margin_horizontal"
-                android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_thread_collapse"
                 android:background="@drawable/comment_expander_background"/>
 
+            <TextView
+                android:id="@+id/comment_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:layout_marginRight="@dimen/comment_author_margin"
+                android:layout_marginEnd="@dimen/comment_author_margin"
+                android:text="andrewsmith1984"
+                android:textColor="@color/secondary_text"
+                android:textStyle="bold"
+                android:textSize="@dimen/comment_author_text_size"
+                android:ellipsize="end"
+                android:maxLines="1"/>
+
             <LinearLayout
-                android:id="@+id/comment_data"
+                android:id="@+id/comment_secondary_data"
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="bottom">
-
+                android:layout_weight="1"
+                android:gravity="start">
 
                 <TextView
-                    android:id="@+id/comment_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:layout_marginRight="@dimen/comment_author_margin"
-                    android:layout_marginEnd="@dimen/comment_author_margin"
-                    android:text="HiThere"
+                    android:layout_marginLeft="@dimen/comment_secondary_data_margin"
+                    android:layout_marginRight="@dimen/comment_secondary_data_margin"
+                    android:text="•"
+                    android:textSize="@dimen/comment_secondary_data_text_size"/>
+
+                <TextView
+                    android:id="@+id/comment_score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/comment_score_margin"
+                    android:layout_marginEnd="@dimen/comment_score_margin"
+                    android:text="@string/comment_score"
                     android:textColor="@color/secondary_text"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/comment_author_text_size"
-                    android:ellipsize="end"
+                    android:textSize="@dimen/comment_score_text_size"
                     android:maxLines="1"/>
 
-                <LinearLayout
-                    android:id="@+id/comment_secondary_data"
-                    android:orientation="horizontal"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="start">
+                    android:layout_marginLeft="@dimen/comment_secondary_data_margin"
+                    android:layout_marginRight="@dimen/comment_secondary_data_margin"
+                    android:text="•"
+                    android:textSize="@dimen/comment_secondary_data_text_size"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/comment_secondary_data_margin"
-                        android:layout_marginRight="@dimen/comment_secondary_data_margin"
-                        android:text="•"
-                        android:textSize="@dimen/comment_secondary_data_text_size"/>
-
-                    <TextView
-                        android:id="@+id/comment_score"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/comment_score_margin"
-                        android:layout_marginEnd="@dimen/comment_score_margin"
-                        android:text="88888"
-                        android:textColor="@color/secondary_text"
-                        android:textSize="@dimen/comment_score_text_size"
-                        android:maxLines="1"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/comment_secondary_data_margin"
-                        android:layout_marginRight="@dimen/comment_secondary_data_margin"
-                        android:text="•"
-                        android:textSize="@dimen/comment_secondary_data_text_size"/>
-
-                    <TextView
-                        android:id="@+id/comment_timestamp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="888 years ago"
-                        android:textColor="@color/secondary_text"
-                        android:textSize="@dimen/comment_timestamp_text_size"
-                        android:maxLines="1"/>
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/comment_timestamp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2 days ago"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/comment_timestamp_text_size"
+                    android:maxLines="1"/>
 
             </LinearLayout>
 
@@ -113,7 +102,7 @@
             android:id="@+id/comment_body"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="jawjawdlijawd"
+            android:text="Lorem ipsum dolor sit amet"
             android:textSize="@dimen/comment_body_text_size"
             android:textColor="@color/primary_text"
             android:bufferType="spannable"/>
