--- a/app/src/main/res/layout/comment_stub_item.xml
+++ b/app/src/main/res/layout/comment_stub_item.xml
@@ -29,8 +29,9 @@
 
             <TextView
                 android:id="@+id/comment_more"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center_vertical"
                 android:text="@string/more_comments"
                 android:textColor="@color/secondary_text"
                 android:textSize="@dimen/comment_more_text_size"
