--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -17,8 +17,8 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/comment_data_margin_horizontal"
-        android:layout_marginRight="@dimen/comment_data_margin_horizontal">
+        android:paddingLeft="@dimen/comment_data_margin_horizontal"
+        android:paddingRight="@dimen/comment_data_margin_horizontal">
 
         <LinearLayout
             android:id="@+id/comment_data_row"
