Added "unhide" context menu item, properly showing/hiding menu items for links and comments

--- a/app/src/main/res/menu/comment_context_menu.xml
+++ b/app/src/main/res/menu/comment_context_menu.xml
@@ -43,6 +43,12 @@
         android:icon="@drawable/ic_navigation_close"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_comment_unhide"
+        android:title="@string/action_unhide"
+        android:icon="@null"
+        app:showAsAction="never" />
+
     <item android:id="@+id/action_comment_report"
         android:title="@string/action_report"
         android:icon="@drawable/ic_action_report"
