--- a/app/src/main/res/menu/link_context_menu.xml
+++ b/app/src/main/res/menu/link_context_menu.xml
@@ -49,6 +49,12 @@
         android:icon="@drawable/ic_navigation_close"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_link_unhide"
+        android:title="@string/action_unhide"
+        android:icon="@null"
+        app:showAsAction="never" />
+
     <item android:id="@+id/action_link_report"
         android:title="@string/action_report"
         android:icon="@drawable/ic_action_report"
